# OneText_Qt

./: .gitignore  CMakeLists.txt  core.cpp  core.h  designer.ui  log.cpp  log.h  main.cpp  main.h  var_global.h  version.h.in
